--- a/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRowReadonly.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/_PunishmentRowReadonly.cshtml
@@ -21,7 +21,7 @@
     <td>
         <div class="material-checkbox text-right">
             <input type="hidden" asp-for="DeletePunishment" value="@Model.DeletePunishment.ToString().ToLower()" />
-            <a href="#" class="text-white" onclick="toggleInput(event)">
+            <a href="#" onclick="toggleInput(event)">
                 <i class="far fa-square"></i>
             </a>
         </div>
