--- a/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/DadSettings.cshtml
@@ -41,12 +41,11 @@
             <span asp-validation-for="ResponseCooldownMinutes" class="text-danger"></span>
             <br/>
         </div>
-        
     </div>
     <div class="row mt-4">
         <span asp-validation-summary="Enabled" class="text-danger"></span>
         <div class="ml-auto">
-            <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save</button>
+            <button type="submit" class="btn btn-volvox-outline save-btn">Save</button>
         </div>
     </div>
 </form>
