--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -149,7 +149,7 @@
                         <span asp-validation-summary="Enabled" class="text-danger"></span>
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="ml-auto">
-                            <button type="submit" class="btn btn-volvox-outline pr-4 pl-4" style="border-radius:20px;">Save</button>
+                            <button type="submit" class="btn btn-volvox-outline save-btn">Save</button>
                         </div>
                     </div>
                 </div>
