--- a/src/Volvox.Helios.Web/Views/Moderation/NewPunishment.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/NewPunishment.cshtml
@@ -13,35 +13,34 @@
     </nav>
 </div>
 
-<form method="POST">
-    <section class="container">
-        <div class="vertical-margin-large">
-            <table asp-for="Punishments">
-
-                <colgroup>
-                    <col span="6" style="border:1px solid black" />
-                </colgroup>
-
-                <thead>
-                    <tr>
-                        <td>Punishment Type</td>
-                        <td>Duration (mins, 0 = Forever) </td>
-                        <td>Warning Type</td>
-                        <td>Warning Threshold</td>
-                        <td>Role</td>
-                    </tr>
-                </thead>
-
-                <tbody id="PunishmentTableBody">
-                    @{
-                        <partial name="_PunishmentRow" model="Model" />
-                    }
-                </tbody>
-            </table>
+<form method="POST" class="container mt-4">
+    <h2>Add a new Punishment</h2>
+    <hr />
+    <div class="col-12 mt-4 border border-gray2 rounded">
+        <label>Punishment Type</label>
+        @Html.DropDownListFor(m => m.PunishType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.PunishType>())
+    </div>
+    <div class="col-12 mt-4 border border-gray2 rounded">
+        Duration (mins, 0 = Forever)
+        <input type="number" asp-for="PunishDuration" value="0" min="0" step="1" max="2147483647" class="form-control" />
+    </div>
+    <div class="col-12 mt-4 border border-gray2 rounded">
+        Warning Type
+        @Html.DropDownListFor(m => m.WarningType, Html.GetEnumSelectList<Volvox.Helios.Domain.Module.ModerationModule.Common.FilterType>())
+    </div>
+    <div class="col-12 mt-4 border border-gray2 rounded">
+        Warning Threshold
+        <input type="number" asp-for="WarningThreshold" value="1" min="1" step="1" max="2147483647" class="form-control" />
+    </div>
+    <div class="col-12 mt-4 border border-gray2 rounded">
+        Role
+        <select asp-for="RoleId" asp-items="Model.Role"></select>
+    </div>
+    @Html.HiddenFor(m => m.PunishmentId)
+    <div class="row mt-4">
+        <div class="col-12 d-flex flex-wrap">
+            <button type="submit" class="ml-auto btn btn-volvox-outline save-btn">Save</button>
         </div>
-    </section>
-    <div class="form-group">
-        <input type="submit" value="Add" class="btn btn-success" />
     </div>
 </form>
 
