--- a/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
@@ -4,6 +4,21 @@
   cursor: pointer;
 }
 
+.material-table {
+  background: var(--color-gray);
+}
+  .material-table td{
+    border-top: 1px solid var(--color-gray2);
+  }
+  
+  .material-table .material-checkbox a {
+    color: var(--color-deep-dark);
+  }
+
+.breadcrumb-wrapper {
+  background: var(--color-gray);
+}
+
 footer{
   background: #eee;
 }
