--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="col-md-12 col-lg-6">
-        <div class="col-12 border border-gray2 rounded pt-2 h-100">
+        <div class="col-12 rounded module-input-wrapper pt-2 h-100">
             <h5 id="Title" class="mb-4">Hey, how cool is this example?</h5>
             <div class="form-group">
                 <label asp-for="Options" class="font-size-small"></label>
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="col-md-12 col-lg-6 mt-lg-0 mt-4">
-        <div class="col-12 border border-gray2 rounded pt-2 h-100">
+        <div class="col-12 pt-2 h-100">
             <div id="pieChart"></div>
         </div>
     </div>
