--- a/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
@@ -9,7 +9,7 @@
 <form method="post" class="col-12">
     <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="row border border-gray2 rounded">
+    <div class="row rounded module-input-wrapper">
         <div class="col-md-9 pt-3 pb-3">
             <h4>Remembot Module</h4>
             <p class="mb-0 text-volvox">
