--- a/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 <hr>
 <form method="post" class="col-12">
-    <div class="row border border-gray2 rounded">
+    <div class="row rounded module-input-wrapper">
         <div class="col-md-9 pt-3 pb-3">
             <h4>Chat tracker Module</h4>
             <p class="mb-0 text-volvox">
