--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-12">
         <form method="post">
             <div class="col-12">
-                <div class="row border border-gray2 rounded">
+                <div class="row rounded module-input-wrapper">
                     <div class="col-md-9 pt-3 pb-3">
                         <h4>Streamer Module</h4>
                         <p class="mb-0 text-volvox">
@@ -64,7 +64,7 @@
                         </div>*@
                 </div>
 
-                <div class="row mt-4 border border-gray2 rounded">
+                <div class="row mt-4 rounded module-input-wrapper">
                     <div class="col-12 pt-3">
                         <h4>Stream Announcer</h4>
                         <hr />
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="row mt-4 border border-gray2 rounded">
+                <div class="row mt-4 rounded module-input-wrapper">
                     <div class="col-12 pt-3">
                         <h4>Streamer Role</h4>
                         <hr />
